array.island.Island.scala.error
Compilation error:
Island:13: error: reassignment to val
    if(x=0){
        ^Island:8: error: type mismatch;
 found   : Unit
 required: Int
  for(x <- num) {
        ^