array.island.Island.scala.code
var highestLevel = 0;
var number = 0 ;
def island(num:Array[Int]): Int = {
  highestLevel = 0;
  number = 0 ;
  // Print all the array elements
  for(x <- num) {
    if(x>highestLevel){
      highestLevel = x;
      number = number+1;
    }
    if(x=0){
      highestLevel = 0;
    }
  }
}